--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.10.0"
 image = "0.24.6"
 log = "0.4.17"
 pollster = "0.3.0"
+tobj = { version = "3.2.5", features = ["async"] }
 wgpu = "0.15.1"
 winit = "0.28.3"
 
@@ -23,4 +24,15 @@ console_log = "1.0.0"
 wgpu = { version = "0.15.1", features = ["webgl"] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
+reqwest = { version = "0.11" }
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+    "Location",
+] }
+
+[build-dependencies]
+anyhow = "1.0.70"
+fs_extra = "1.3.0"
+glob = "0.3.1"
